--- a/style.css
+++ b/style.css
@@ -1,3 +1,43 @@
+@keyframes color-change {
+    0% {
+      color: black;
+    }
+    25% {
+        color: chartreuse
+    }
+    50% {
+      color: black;
+    }
+    75% {
+        color: chartreuse
+    }
+    100% {
+      color: black;
+    }
+  }
+  @keyframes color-changeh1 {
+    0% {
+      color: black;
+    }
+    25% {
+        color: blue
+    }
+    50% {
+      color: black;
+    }
+    75% {
+        color: blue
+    }
+    100% {
+      color: black;
+    }
+  }
+  h1:hover {
+    animation: color-changeh1 4s infinite; 
+  }
+  h2:hover {
+    animation: color-change 6s infinite;
+  }
 body {
     background-color: aliceblue;
     font-size: 20px;
@@ -5,13 +45,17 @@ body {
 }
 
 h1 {
-    color: blue;
-    background-color: yellow;
+    background-color: lightgreen;
     border-radius: 30px;
     padding: 20px;
     margin-bottom: 50px;
 }
-
+h2 {
+    background-color: lightseagreen;
+    border-radius: 40px;
+    padding: 30px;
+    margin-bottom: 15px;
+}
 p {
     color: green;
 }
