--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,65 +1,93 @@
-@keyframes color-change {
-    0% {
-      color: black;
-    }
-    25% {
-        color: chartreuse
-    }
-    50% {
-      color: black;
-    }
-    75% {
-        color: chartreuse
-    }
-    100% {
-      color: black;
-    }
-  }
-  @keyframes color-changeh1 {
-    0% {
-      color: black;
-    }
-    25% {
-        color: blue
-    }
-    50% {
-      color: black;
-    }
-    75% {
-        color: blue
-    }
-    100% {
-      color: black;
-    }
-  }
-  h1:hover {
-    animation: color-changeh1 4s infinite; 
-  }
-  h2:hover {
-    animation: color-change 6s infinite;
-  }
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
 body {
-    background-color: aliceblue;
-    font-size: 20px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
+    line-height: 20px;
+    background-color: #fff;
+    color: #272727;
 }
 
-h1 {
-    background-color: lightgreen;
-    border-radius: 30px;
-    padding: 20px;
-    margin-bottom: 50px;
-}
-h2 {
-    background-color: lightseagreen;
-    border-radius: 40px;
-    padding: 30px;
-    margin-bottom: 15px;
-}
-p {
-    color: green;
+h1, h2, p {
+    margin: 0;
 }
 
 ul {
-    list-style-type: '- ';
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.header {
+    background-image: url("../img/back.jpg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: left;
+    background-color: #CCE59D;
+    padding: 25vh 30px;
+    margin-bottom: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.header__text {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    width: fit-content;
+    text-align: right;
+}
+
+main {
+    padding: 0 30px 100px;
+}
+
+.main__title {
+    text-align: center;
+    margin-bottom: 100px;
+}
+
+.list {
+    display: flex;
+    justify-content: space-around;
+}
+
+.list__item a {
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: inherit;
+    gap: 20px;
+    padding: 20px;
+    border-radius: 24px;
+    border: 1px solid #EB8028;
+    transition: 0.2s;
+}
+.item__img {
+    object-fit: contain;
+    width: 150px;
+}
+
+.list__item a:hover {
+    box-shadow: 1px 1px 4px 4px #0EB07C;
+}
+
+.main__rez {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+}
+
+.rez__img {
+    object-fit: contain;
+    width: 300px;
+}
+
+.main__title--margin {
+    margin-bottom: 50px;
 }
