--- a/templates/lights.html
+++ b/templates/lights.html
@@ -36,6 +36,11 @@
         <a href=/{{size}}/9> 
           <img class="item__img" src="../static/img/light.svg" alt="light">
           <span>8+ lamp</span></a>
+        </li>
+        <li class="list__item">
+          <a href=/{{size}}/0> 
+            <img class="item__img" src="../static/img/light.svg" alt="light">
+            <span>nasza ekologiczna konstrukcja</span></a>
       </li>
     </ul>
     {% endblock %}
